fixed css
hover bars were too high when not active and showed up on page. now
fixed.

--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ ul {
     height: 100px;
 }
 li {
+    width: 90px;
     padding-top: 40px;
     float: right;
 }
@@ -73,14 +74,14 @@ h3 {
     width: 100%;
     background-color: #101010;
     transition-duration: .1s;
-    transform: translate(0,0px);
+    transform: translate(0,2px);
 }
 .active{
     background-color: #D3D3D3;
 }
 a:hover + .bottom{
     transition-duration: .5s;
-    transform: translate(0,-10px);
+    transform: translate(0,-11px);
 }
 
 .bar{
